--- a/index.html
+++ b/index.html
@@ -2,11 +2,26 @@
 <html>
 <head>
 	<title>RxJS Boiler</title>
+	<style>
+		body {
+			background: #252830;
+			color: #cfd2da;
+		}
+		h2 {
+			text-align: center;
+			color: #cfd2da;
+		}
+	</style>
 </head>
 <body>
 	<h1>RxJS Boiler</h1>
-	<p>For more info, visit <a target="_blank" href="https://github.com/bradtraversy/rxjs_boiler">https://github.com/bradtraversy/rxjs_boiler</a></p>
-
+	<!-- <p>For more info, visit <a target="_blank" href="https://github.com/bradtraversy/rxjs_boiler">https://github.com/bradtraversy/rxjs_boiler</a></p> -->
+	<h2>Rx from button</h2>
+	<button id="btn">Click me!</button>
+	<input id="input" type="text">
+	<div id="output"></div>
+	<button id="btn2">Click me2!</button>
+	<button id="btn3">Click me3!</button>
 	<script src="./dist/app.bundle.js"></script>
 </body>
 </html>
