--- a/index.html
+++ b/index.html
@@ -91,6 +91,17 @@
 	<b>Concat :</b><button id="btnStartConcat">Start</button><button id="btnStopConcat">Stop</button>
 	<button id="btnClearConcat">Clear</button>
 	<div id="outputConcat" class="console"></div>
+	<h2>MergeMap & SwitchMap</h2>
+	<h3>MergeMap</h3>
+	<input id="firstName" type="text"><input id="lastName" type="text">
+	<b>FullName :</b><b id="outFullName"></b>
+	<h3>SwitchMap</h3>
+	<p style="color:#E64759">Click on the button multiple times</p>
+	<button id="normalBtn">Normal</button>
+	<button id="switchBtn">Switch</button>
+	<button id="btnStopSwitch">Stop</button>
+	<button id="btnClearSwitch">Clear</button>
+	<div id="outputSwitchMap" class="console"></div>
 	<script src="./dist/app.bundle.js"></script>
 </body>
 </html>
