--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 	<div class="hashtag">
 		<a target="_blank" href="https://rxjs-dev.firebaseapp.com/api/operators/debounce">debounce</a>
 		<a target="_blank" href="https://rxjs-dev.firebaseapp.com/api/operators/debounceTime">debounceTime</a>
+		<a target="_blank" href="https://rxjs-dev.firebaseapp.com/api/operators/distinctUntilChanged">distinctUntilChanged</a>
 		<a target="_blank" href="https://rxjs-dev.firebaseapp.com/api/index/function/fromEvent">fromEvent</a>
 		<a target="_blank" href="https://rxjs-dev.firebaseapp.com/api/index/function/fromPromise">fromPromise</a>
 		<a target="_blank" href="https://rxjs-dev.firebaseapp.com/api/index/function/pipe">pipe</a>
